test(Carlsen): Changed many tests